add shakes, invis in column, better renders

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="DmBuddy, A homebrew friendly encounter builder and streaming player view"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/stan.png" />
     <link href="https://fonts.googleapis.com/css2?family=Spectral+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap" rel="stylesheet">
 
